<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_7" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fXV-qu-qWC">
                                <rect key="frame" x="20" y="57" width="388" height="835"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="4X3-Rn-5tp">
                                        <rect key="frame" x="0.0" y="0.0" width="388" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AXX-Is-WG4" userLabel="Question title label">
                                                <rect key="frame" x="0.0" y="0.0" width="68.333333333333329" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="19"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcY-vM-bxB" userLabel="Index label">
                                                <rect key="frame" x="352" y="0.0" width="36" height="23.666666666666668"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ccX-H7-je7" userLabel="Preview Image">
                                        <rect key="frame" x="44.333333333333343" y="43.666666666666686" width="299.33333333333326" height="449"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="ccX-H7-je7" secondAttribute="height" multiplier="2:3" id="wMw-f2-8iy"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYT-IY-fVr" userLabel="Question label">
                                        <rect key="frame" x="26.333333333333343" y="512.66666666666663" width="335.33333333333326" height="242.33333333333337"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ci5-yZ-hH8">
                                        <rect key="frame" x="20" y="775" width="348" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bpl-qR-yjg" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="164" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="YP Black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7xK-Bi-AIm"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="03a-nb-Nds" userLabel="Yes button">
                                                <rect key="frame" x="184" y="0.0" width="164" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="YP Black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="82P-iJ-Sf2"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="aPY-eK-f15"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="4X3-Rn-5tp" secondAttribute="trailing" id="3vQ-Ws-8bO"/>
                                    <constraint firstItem="ci5-yZ-hH8" firstAttribute="leading" secondItem="fXV-qu-qWC" secondAttribute="leading" constant="20" id="DRE-4I-QSx"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="fXV-qu-qWC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7If-AH-3YH"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fXV-qu-qWC" secondAttribute="trailing" constant="20" id="KU8-8e-2Yw"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fXV-qu-qWC" secondAttribute="bottom" id="gtf-1M-UrE"/>
                            <constraint firstItem="fXV-qu-qWC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="oKj-ub-v8V"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="counterLabel" destination="GcY-vM-bxB" id="rmd-6K-eOP"/>
                        <outlet property="imageView" destination="ccX-H7-je7" id="uiJ-kL-4NE"/>
                        <outlet property="noButtonLabel" destination="bpl-qR-yjg" id="5GX-D6-qO4"/>
                        <outlet property="textLabel" destination="HYT-IY-fVr" id="ygf-LW-6yE"/>
                        <outlet property="yesButtonLabel" destination="03a-nb-Nds" id="lD0-aK-HJE"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
